# agent-orchestrator-demo

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  RUNBOOK.md  compose.pgvector.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py  observability.py
backend/agents/: __init__.py  aggregator.py  event_agent.py  intent_classifier.py  people_agent.py  persona_adapter.py  state.py  supervisor.py  topic_agent.py
backend/api/: routes.py
backend/llm/: __init__.py  groq_client.py
backend/memory/: __init__.py  mem0_client.py  pgvector_client.py
backend/memory/migrations/: 001_memories_pgvector.sql
backend/tenants/: __init__.py  defaults.py  loader.py  schemas.py
backend/tools/: __init__.py  events.py  schemas.py
eval/: __init__.py  dataset.json  judge.py  results.md  run_eval.py
frontend/: index.html
scripts/: smoke_demo.py
tenants/: acme.yaml  kids_safe.yaml  zenith.yaml
tests/: conftest.py  test_aggregator.py  test_api.py  test_eval_smoke.py  test_eval_smoke_ci.py  test_event_agent_tool_use.py  test_intent_classifier.py  test_memory.py  test_memory_pgvector.py  test_observability.py  test_persona_adapter.py  test_supervisor_graph.py  test_tenants.py  test_tools.py
