[project]
name = "agent-orchestrator-demo"
version = "0.1.0"
description = "Multi-agent social concierge with LangGraph supervisor, mem0-style long-term memory, and Groq model tiering"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Danilo Polishchuk", email = "marinmokano76@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "groq==0.11.0",
    "langgraph==0.2.34",
    "langchain-core==0.3.10",
    "chromadb==0.5.5",
    "sentence-transformers==3.1.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.8",
    "mypy==1.11.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
